@@ -102,6 +102,8 @@ my %default_config = (
 
     send_menu_xml_file => $ENV{HOME} . '/.clusterssh/send_menu',
 
+    shell_expansion => "/bin/bash -c 'shopt -s extglob\n echo %items%'",
+
     # don't set username here as takes precendence over ssh config
     user => '',
 );
