@@ -1,6 +1,7 @@
 4.05_01 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Failure to find the terminal binary should not be fatal
 - Fix processing of '--extra_tag_file' and its configuration item (Github issue #51)
+- Add bash shell expansion on host names containing a '{' character (Github issue #53)
 
 4.05 2015-11-28 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Change default key_quit from 'Control-q' to 'Alt-q' (Github issue #50)
